packages = [
     { include = "labyrinth_game" },
 ]

[tool.poetry]
name = "project1_Rusakov_Egor_M25-555"
version = "0.1.0"
description = ""
authors = ["Egor Rusakov"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
